--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "@types/node": "^16.18.94",
     "@types/react": "^18.2.74",
     "@types/react-dom": "^18.2.24",
-    "axios": "^1.6.8",
     "dayjs": "^1.11.10",
+    "prettier": "^3.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.2",
